<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TenPercent">10%</string>
    <string name="FifteenPercent">15%</string>
    <string name="fifteen_percent">15%</string>
    <string name="ten_percent">10%</string>
    <string name="twenty_percent">20%</string>
    <string name="tv_tip_label">Tip Amount:</string>
    <string name="tip_amount">-</string>
    <string name="tip_textfield">Total Bill Amount is...</string>
    <string name="tv_total_label">Total Amount:</string>
    <string name="tv_tip_percentage_label">Tip Percentage:</string>

</resources>
