<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculator" >

    <Button
        android:id="@+id/button_10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sb_tip_slider"
        android:layout_below="@+id/sb_tip_slider"
        android:gravity="center_vertical|center_horizontal|fill|top"
        android:text="@string/ten_percent" />

    <Button
        android:id="@+id/button_15p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_tip_percentage_label"
        android:layout_centerHorizontal="true"
        android:text="@string/FifteenPercent" />

    <Button
        android:id="@+id/button_20p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_tip_percentage_label"
        android:layout_alignRight="@+id/sb_tip_slider"
        android:text="@string/twenty_percent" />

    <TextView
        android:id="@+id/tv_total_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_total_label"
        android:layout_alignBottom="@+id/tv_total_label"
        android:layout_alignLeft="@+id/tv_result"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_label"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_tip_percentage_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_label"
        android:layout_alignLeft="@+id/tv_result"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/etv_total_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|clip_horizontal"
        android:hint="@string/tip_textfield"
        android:inputType="numberDecimal"
        android:minHeight="50dp"
        android:textSize="25sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_tip_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_label"
        android:layout_below="@+id/button_10p"
        android:layout_marginTop="26dp"
        android:text="@string/tv_tip_percentage_label" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tip_percentage_label"
        android:layout_marginTop="80dp"
        android:layout_toLeftOf="@+id/button_15p"
        android:text="@string/tv_tip_label"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/sb_tip_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etv_total_bill"
        android:layout_below="@+id/etv_total_bill"
        android:layout_marginTop="54dp"
        android:max="10"
        android:progress="5" />

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_label"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:text="@string/tv_total_label" />

</RelativeLayout>